# cpp_examples

./: .gitignore  CMakeLists.txt  Makefile  README.en.md  README.md  WORKSPACE  makefile
cmake/: armv8.cmake  x64.cmake
src/lib/: BUILD  makefile  my_math.h
src/main/: BUILD  CMakeLists.txt  Makefile  main.cc
src/shared_lib/: BUILD  CMakeLists.txt  Makefile  shared_lib.cc  shared_lib.h
src/static_lib/: BUILD  CMakeLists.txt  Makefile  static_lib.cc  static_lib.h
src/static_shared_lib/: BUILD  CMakeLists.txt  Makefile  static_shared_lib.cc  static_shared_lib.h
